[workspace]

members = [
    "advent_2020_day_1",
    "advent_2020_day_2",
    "advent_2020_day_3",
    "advent_2020_day_4",
    "advent_2020_day_5",
    "advent_2020_day_6",
    "advent_2020_day_7",
    "advent_2020_day_8",
    "advent_2020_day_9",
    "advent_2020_day_10",
    "advent_2020_day_11",
]