[workspace]

members = [
    "advent_2020_day_1",
    "advent_2020_day_2",
    "advent_2020_day_3",
    "advent_2020_day_4",
    "advent_2020_day_5",
    "advent_2020_day_6",
    "advent_2020_day_7",
    "advent_2020_day_8",
    "advent_2020_day_9",
    "advent_2020_day_10",
    "advent_2020_day_11",
    "advent_2020_day_12",
    "advent_2020_day_13",
    "advent_2020_day_14",
    "advent_2020_day_15",
    "advent_2020_day_16",
    "advent_2020_day_17",
    "advent_2020_common",
]